Remove calls to "new String(String)" and "new Integer(int)", they are useless.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@7624 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c